prevent to generate too much grid but just one with one click

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -60,9 +60,6 @@ footer a{
     color: var(--purple);
     text-decoration: underline;
 }
-.play{
-    margin-top: 1rem;
-}
 .container > div{
     display: flex;
     width: calc((100% /10 ));
